@@ -186,6 +186,7 @@ typedef enum {
 	POP3_AUTHORIZATION_STATE,
 	POP3_TRANSACTION_STATE,
 	POP3_UPDATE_STATE,
+	POP3_QUIT_STATE
 } Pop3State_t;
 
 /**
